# shp-to-geojson

./: pyproject.toml  run.ipynb
