[tool.poetry]
name = "shp-to-geojson"
version = "0.1.0"
description = ""
authors = ["Cleyson Silva"]
readme = "README.md"
packages = [{include = "shp_to_geojson"}]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.13.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
